# archiver

./: .gitignore  README.md  pyproject.toml
logs/: 2024-05-14_logs.csv
src/: deposit.csv  interest.py  main.py  settle2.csv  trades.csv  utils.py
