[tool.poetry]
name = "archiver"
version = "0.1.0"
description = ""
authors = ["soundsonacid <soundsonacid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
solana = "^0.34.0"
pandas = "^2.2.2"
driftpy = {path = "/Users/frank/Documents/code/drift/driftpy", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
