[tool.poetry]
name = "archiver"
version = "0.1.0"
description = ""
authors = ["soundsonacid <soundsonacid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
solana = "^0.34.0"
pandas = "^2.2.2"
driftpy = "^0.7.100"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
