[tool.poetry]
name = "archiver"
version = "0.1.0"
description = ""
authors = ["soundsonacid <soundsonacid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
solana = "^0.36.0"
driftpy = "^0.8.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
